feat: setup repo

--- a/foundry.toml
+++ b/foundry.toml
@@ -2,5 +2,36 @@
 src = "src"
 out = "out"
 libs = ["lib"]
+ffi = true
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
+
+remappings = [
+    'forge-std/=lib/forge-std/src/',
+    'ds-test/=lib/forge-std/lib/ds-test/src/',
+    '@openzeppelin/=lib/openzeppelin-contracts/',
+]
+
+solc = '0.8.23'
+evm_version = 'istanbul'
+use_literal_content = true
+extra_output = ["devdoc", "userdoc", "storagelayout"]
+fs_permissions = [{ access = "read-write", path = "./" }]
+
+[fmt]
+tab_width = 2
+line_length = 120
+bracket_spacing = true
+
+[rpc_endpoints]
+localhost = "http://localhost:8545"
+ethereum = "https://eth.llamarpc.com"
+ronin-mainnet = "https://api.roninchain.com/rpc"
+goerli = "https://ethereum-goerli.publicnode.com"
+ronin-testnet = "https://saigon-archive.roninchain.com/rpc"
+
+[fuzz]
+runs = 256
+
+[invariant]
+runs = 256
