--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,6 +1,18 @@
 name: test
 
-on: workflow_dispatch
+on:
+  push:
+    branches:
+      - mainnet
+      - testnet
+      - 'feature/*'
+      - 'features/*'
+  pull_request:
+    branches:
+      - mainnet
+      - testnet
+      - 'feature/*'
+      - 'features/*'
 
 env:
   FOUNDRY_PROFILE: ci
@@ -13,7 +25,7 @@ jobs:
     name: Foundry project
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v3
         with:
           submodules: recursive
 
