feat: add  and happy case unit tests

--- a/foundry.toml
+++ b/foundry.toml
@@ -7,6 +7,7 @@ ffi = true
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
 
 remappings = [
+    'contract-libs/=src/',
     'forge-std/=lib/forge-std/src/',
     'ds-test/=lib/forge-std/lib/ds-test/src/',
     '@openzeppelin/=lib/openzeppelin-contracts/',
